Config is parsed

--- a/doc/config-example.yml
+++ b/doc/config-example.yml
@@ -1,38 +1,42 @@
 # This is a config file for access-log-supervisor
 # This file defines a set of rules that tell whether an access is allowed, forbidden or suspicious
 
+# Output config
+mail: hostmaster@my.host.tld
+
 
 # (Optional) aliases definitions
 # An alias contain a list of (single or multiple):
 #   * values (in case it can be parsed as such)
 #   * other aliases (otherwise)
 addresses:
-- lan:
+    lan:
     - 10.0.0.0/8
     - 192.168.0.0/24
     - 192.168.1.0/24
-- My home provider:
+    My home provider:
     - 100.101.102.0/24
-- My office provider:
+    My office provider:
     - 200.201.202.0/16
-- My own VPS:
+    My own VPS:
     - 111.222.111.222
-- My addresses:
+    My addresses:
     - lan
     - My home provider
     - My office provider
     - My own VPS
 
 users:
-- Me:
+    Me:
     - john
-    - john
+    - John
     - John Lennon
-- My friends:
+    My friends:
     - paul
     - george
     - ringo
 
+# Note: times are ignored in the current implementation
 times:
 - Weekends
 - Weekdays
@@ -46,9 +50,9 @@ default_rule: critical
 # Here are the rules each detected access will be compared against
 # The first matching rule will be used. If no rule matches, then the default_rule will apply
 # Each rule defines parameters (user, address, etc.)
-# Each parameter can be either a "hard-coded" value, an alias, or a "*" wildcard
+# Each parameter can be either a "hard-coded" value, an alias, or not defined (in this cas, this acts like a wildcard)
 rules:
-- {user: Me, address: My Addresses, time: Weekdays, status: OK, description: "regular access"}
-- {user: root, address: 80.81.82.83, time: Weekdays, status: OK, description: "this rules uses values and aliases"}
-- {user: root, address: 80.81.82.83, time: Weekends, status: warning, description: "this rules does not use any aliases"}
-- {user: *, address: 1.2.3.0/30, time: *, status: warning, description: "I have a specific interest on this address"}
+- {users: Me,   addresses: My addresses, times: Weekdays, status: OK, description: "regular access"}
+- {users: root, addresses: 80.81.82.83,  times: Weekdays, status: OK, description: "this rules uses values and aliases"}
+- {users: root, addresses: 80.81.82.83,  times: Weekends, status: warning, description: "this rules does not use any aliases"}
+- {             addresses: 1.2.3.0/30,                    status: warning, description: "I have a specific interest on this address"}
