--- a/doc/config-example.yml
+++ b/doc/config-example.yml
@@ -1,6 +1,9 @@
 # This is a config file for access-log-supervisor
 # This file defines a set of rules that tell whether an access is allowed, forbidden or suspicious
 
+# This file uses YAML syntax: https://yaml.org/start.html
+# It is quite straightforward provided that you never forget space (or newline) after a colon ;-)
+
 # If you define a mail address here, any output will be mailed to it
 # This requires 'sendmail' is installed and properly configured on this machine
 mail: hostmaster@my.host.tld
